--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -252,6 +252,11 @@ df_quant1 <- as.data.frame(do.call(rbind, quantile_0.025)) %>% mutate(ID = 1:93)
 sum_data_6 <- entire_data_6 %>% group_by(spp, ID) %>% summarise(mean_biomass = mean(biomass), sd_biomass= sd(biomass), median_biomass = median(biomass)) %>% left_join(df1, by = "ID")
 sum_data_6 <- sum_data_6 %>% left_join(df_quant1, by = "ID") %>% rename(quant_2.5 = "2.5%", quant_97.5 = "97.5%")
 
+sum_data_6 %>% mutate("lower.quantile" = cut(quant_2.5, 
+                      breaks = c(-Inf, 1, Inf),
+                      labels = c("Below 1", "Above 1"),
+                      right = TRUE))
+
 #Check to see if 500 end biomass values for each species are normally distributed
 #Only one is normally distributed-mesopelagics 
 listids <- list()
@@ -276,9 +281,30 @@ new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15
 comm_value <- sum_data_6 %>% filter(spp %in% commercial_predators) 
 noncomm_value <- sum_data_6 %>% filter(spp %in% new_noncomm)
 
-#Make plot
-noncomm_value %>% ggplot() + 
-geom_linerange(noncomm_value, mapping=aes(y=spp, xmin= quant_2.5, xmax= quant_97.5), width=0.2, size=1, color="blue") 
+#Make plots
+comm_value %>% ggplot() + 
+  geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5, fill = lower.quantile), size=0.5, fill = "white", shape=22) + 
+scale_y_discrete(limits = unique(rev(comm_value$spp)), labels= c("Greenstriped" = expression(bold("Greenstriped rock.")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thorny.")), "Other cephal."= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rock.")), "Shortspine thorny."= expression(bold("Shortspine thorny.")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rock.")), "Splitnose rock."= expression(bold("Splitnose rock.")), "Widow rock."= expression(bold("Widow rock.")), "Yellowtail rock."= expression(bold("Yellowtail rock.")))) +
+geom_vline(xintercept = 1, size = 0.5) + 
+xlab("Relative biomass") + ylab("Species") +
+theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())  
+  
+
+#ggsave(width = 7, height = 5, "~/Documents/OTZ.Manuscript/Images/500.commercial.25.jpeg")
+
+    #Next steps: rename some species (no capitalization)
+noncomm_value %>% ggplot() + geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, color="black", fill="white", shape=22) + 
+geom_vline(xintercept = 1, size = 0.5) + 
+xlab("Relative biomass") + ylab("Species") +
+theme_bw() + theme(panel.border = element_blank()) +
+theme(axis.line = element_line(colour = "black")) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
+scale_y_discrete(limits = unique(rev(noncomm_value$spp)), labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juvenile rockfish")) + 
+ggsave(width = 7, height = 5, "~/Documents/OTZ.Manuscript/Images/500.noncommercial.25.jpeg")
+
+
 ```
 
 
