--- a/Scripts/Multiple.Rpathruns.Rmd
+++ b/Scripts/Multiple.Rpathruns.Rmd
@@ -271,7 +271,6 @@ for (ids in unique(entire_data_6$ID)){
 #Organize datasets
 
 #Species overlap between noncomm and commercially valuable 
-intersect(comm_value$spp, noncomm_value$spp)
 noncommerical_predators
 new_noncomm <- noncommerical_predators[- c(9,7,11,4,6,17,1,12,8,10,19,5,16,18,15,14,13,3)]
 #Highlight albacore (9), arrowtooth (7), canary rockfish (11),greenstriped (4), lingcod (6), longspine thorny (17), other cephal (1), pacific ocean perch (12), sablefish (8), salmon (10), sharks (19), shelf rock (5), shortspine thorny (16), skates (18), slope rockfish (15), splitnose rockfish (14), widow rock (13), and yellowtail rock (3) in commercially valuable and remove from noncommercially valuable 
@@ -284,23 +283,26 @@ noncomm_value <- sum_data_6 %>% filter(spp %in% new_noncomm)
 comm_value_500 <- comm_value %>% ggplot(aes(fill = median.value)) + 
   geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, shape=22) + 
   scale_fill_grey() + 
-scale_y_discrete(limits = unique(rev(comm_value$spp)), labels= c("Greenstriped" = expression(bold("Greenstriped rock.")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thorny.")), "Other cephal."= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rock.")), "Shortspine thorny."= expression(bold("Shortspine thorny.")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rock.")), "Splitnose rock."= expression(bold("Splitnose rock.")), "Widow rock."= expression(bold("Widow rock.")), "Yellowtail rock."= expression(bold("Yellowtail rock.")))) +
+scale_y_discrete(limits = unique(rev(comm_value$spp)), labels= c("Greenstriped" = expression(bold("Greenstriped rock.")), "P. Ocean Perch"= expression(bold("P. ocean perch")), "Albacore" = expression(bold("Albacore")), "Arrowtooth" = expression(bold("Arrowtooth flounder")), "Canary rock."= expression(bold("Canary rock.")), "Lingcod"= expression(bold("Lingcod")), "Longspine thorny."= expression(bold("Longspine thorny.")), "Other cephal."= expression(bold("Other cephal.")), "Sablefish"= expression(bold("Sablefish")), "Salmon"= expression(bold("Salmon")), "Sharks"= expression(bold("Sharks")), "Shelf rock."= expression(bold("Shelf rock.")), "Shortspine thorny."= expression(bold("Shortspine thorny.")), "Skates"= expression(bold("Skates")), "Slope rock."= expression(bold("Slope rock.")), "Splitnose rock."= expression(bold("Splitnose rock.")), "Widow rock."= expression(bold("Widow rock.")), "Yellowtail rock."= expression(bold("Yellowtail rock.")))) +
+theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
 geom_vline(xintercept = 1, size = 0.5) + 
 xlab("Relative biomass") + ylab("Species") + labs(fill = "Median biomass") + 
 theme_bw() + theme(panel.border = element_blank()) +
 theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
-ggsave(width = 7, height = 5, "~/Documents/OTZ.Manuscript/Images/500.commercial.25.jpeg")
+ggsave(width = 6, height = 4, "~/Documents/OTZ.Manuscript/Images/500.commercial.25.jpeg")
 comm_value_500
+
     #Next steps: rename some species (no capitalization)
 noncomm_value_500 <- noncomm_value %>% ggplot(aes(fill = median.value)) + geom_pointrange(aes(y=spp, x=median_biomass, xmin=quant_2.5, xmax= quant_97.5), size=0.5, color="black", shape=22) + 
 scale_fill_grey() + 
-scale_y_discrete(limits = unique(rev(noncomm_value$spp)), labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juvenile rockfish")) + 
+scale_y_discrete(limits = unique(rev(noncomm_value$spp)), labels= c("Western Gull" = "Western gull", "Tufted Puffin" = "Tufted puffin", "Sea Lions"= "Sea lions", "Resident Orcas"= "Resident orcas", "Leach's S. Petrel" ="Leach's s. petrel", "Juv. Ele. Seal"="Juv. elephant seal", "Double corm."= "Double cormorant", "Brandt's corm." = "Brandt's cormorant", "Juv. rock." = "Juvenile rock.")) + 
 geom_vline(xintercept = 1, size = 0.5) + 
 xlab("Relative biomass") + ylab("Species") + labs(fill = "Median biomass") + 
 theme_bw() + theme(panel.border = element_blank()) +
 theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
+theme(legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) + 
 ggsave(width = 7, height = 5, "~/Documents/OTZ.Manuscript/Images/500.noncommercial.25.jpeg")
 noncomm_value_500
 ```
